Fixing frame description spacing

--- a/src/stylesheets/_border.scss
+++ b/src/stylesheets/_border.scss
@@ -1,3 +1,4 @@
+$spacing: 18px;
 $border-width: 3px;
 
 @mixin border($color: $black) {
